AP6275S: chown wifi:wifi bcmdhd_wifi6
Bug #1546
AP6275S: chown wifi:wifi bcmdhd_wifi6

--- a/init.connectivity.rc
+++ b/init.connectivity.rc
@@ -38,6 +38,7 @@ on zygote-start
     mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
     
     chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
+    chown wifi wifi /sys/module/bcmdhd_wifi6/parameters/firmware_path
 
 #for nfc
     chmod 0660 /dev/bcm2079x
@@ -48,6 +49,8 @@ on zygote-start
 on property:wlan.driver.status=ok
     chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
     chown wifi wifi /sys/module/bcmdhd/parameters/nvram_path
+    chown wifi wifi /sys/module/bcmdhd_wifi6/parameters/firmware_path
+    chown wifi wifi /sys/module/bcmdhd_wifi6/parameters/nvram_path
 
 on property:vendor.wifi.direct.interface=p2p0
     setprop wifi.direct.interface p2p0
