--- a/ueventd.rockchip.rc
+++ b/ueventd.rockchip.rc
@@ -53,11 +53,11 @@
 /dev/gps                  0660   gps        gps
 
 # for BT
-/dev/vflash               0660   bluetooth  net_bt_stack
-/dev/ttyS0                0660   bluetooth  net_bt_stack
-/dev/ttyS1                0660   bluetooth  net_bt_stack
-#/dev/ttyS2                0660   bluetooth  net_bt_stack
-/dev/rtk_btusb            0660   bluetooth  net_bt_stack
+/dev/vflash               0660   bluetooth  bluetooth
+/dev/ttyS0                0660   bluetooth  bluetooth
+/dev/ttyS1                0660   bluetooth  bluetooth
+#/dev/ttyS2                0660   bluetooth  bluetooth
+/dev/rtk_btusb            0660   bluetooth  bluetooth
 
 #for hid audio
 /dev/hidraw0              0660   audio  audio
