--- a/ueventd.rockchip.rc
+++ b/ueventd.rockchip.rc
@@ -57,11 +57,11 @@
 /dev/gps                  0660   gps        gps
 
 # for BT
-/dev/vflash               0660   bluetooth  net_bt
-/dev/ttyS0                0660   bluetooth  net_bt
-/dev/ttyS1                0660   bluetooth  net_bt
-/dev/ttyS2                0660   bluetooth  net_bt
-/dev/rtk_btusb            0660   bluetooth  net_bt
+/dev/vflash               0660   bluetooth  bluetooth
+/dev/ttyS0                0660   bluetooth  bluetooth
+/dev/ttyS1                0660   bluetooth  bluetooth
+/dev/ttyS2                0660   bluetooth  bluetooth
+/dev/rtk_btusb            0660   bluetooth  bluetooth
 
 #for hid audio
 /dev/hidraw0              0660   audio  audio
